--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ form input{
     height: 100vh;
     width: 140px;
     margin: -1vh;
-    object-fit: fill;
+    background-size: contain;
 }
   
 .or{
