--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,8 @@ form input{
     height: 100vh;
     width: 140px;
     margin: -1vh;
-    background-size: contain;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
   
 .or{
