--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@ form input{
 }
 #pic1 {
     height: 100vh;
-    width: 140px;
+    min-height: 430px;    
     margin: -1vh;
     background-size: cover;
     background-repeat: no-repeat;
